# FeO

./: .gitignore  Cargo.toml
src/: audio.rs  commands.rs  discord.rs  main.rs  player.rs  reddit.rs
src/audio/: player.rs
