[package]
name = "sniffer"
version = "0.6.9"
authors = ["Dominic DeMarco <awesome3165@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux = { git = "https://github.com/halcyonnouveau/roux.git" }
#roux = { version = "1.3.8-alpha.0", path = "../roux" }
reqwest = { version = "0.11.4" , features = ["json", "native-tls-alpn", "gzip", "brotli", "deflate"] }
#roux = { git = "https://github.com/ddemarco5/roux.git" }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
log = "*"
simple-log = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
regex = "*"
lazy_static = "*"
futures-locks = "*"
songbird = { version = "0.2.2", features = ["serenity", "native", "builtin-queue", "yt-dlp"] }
#songbird = "0.2.2"
uuid = "*"
logos = "0.12.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    #"framework",
    "gateway",
    "http",
    "model",
    #"standard_framework",
    "utils",
    "native_tls_backend",
    "cache",
]
version = "*"